add views
